--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 </head>
 
 <body>
-...
+<h1 style="text-align:center;">404</h1>
+<hr>
+<pre style="text-align:center;">
+Well ...
+This page is lost for unknown reason ...
+<pre>
+<img src="https://media.discordapp.net/attachments/980794537423302686/1031039142479540255/IMG_9201.jpg" height="64" width="64">
+
 </body>
 </html>
