--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 Well ...
 This page is lost for unknown reason ...
 We are trying to look for it ...
-<pre>
+</pre>
 <img src="https://media.discordapp.net/attachments/980794537423302686/1031039142479540255/IMG_9201.jpg" height="64" width="64">
 
 </body>
