--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 
 <body>
-<h1 style="text-align:center;">404</h1>
+<h1 class="center">404</h1>
 <hr>
-<pre style="text-align:center;">
+<pre class="center">
 Well ...
 This page is lost for unknown reason ...
 We are trying to look for it ...
