--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ This page is lost for unknown reason ...
 We are trying to look for it ...
 </pre>
 <img src="https://media.discordapp.net/attachments/980794537423302686/1031039142479540255/IMG_9201.jpg" height="64" width="64">
+<h5 class="center">© 2022 Black Studio</h5>
 
 </body>
 </html>
