--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 class="center">404</h1>
 <hr>
 <pre class="center">
-Well ...
+Oops ...
 This page is lost for unknown reason ...
 We are trying to look for it ...
 </pre>
