--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Black Hat</title>
+	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="stylesheet" href="./style.css">
 </head>
 
@@ -13,7 +14,7 @@
 	This page is lost for unknown reason ...
 	We are trying to look for it ...
 	</pre>
-	<img class="pic" src="https://media.discordapp.net/attachments/980794537423302686/1031039142479540255/IMG_9201.jpg" height="64" width="64">
+	<img class="pic" src="./picture.png" height="64" width="64">
 	<h5 class="center">© 2022 Black Studio</h5>
 
 </body>
