--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	We are trying to look for it ...
 	</pre>
 	<img class="pic" src="./picture.png" height="64" width="64">
-	<h5 class="center">© 2022 Black Studio</h5>
+	<a href="./homepage/index.html"><h5 class="center">© 2022 Black Studio</h5></a>
 
 </body>
 </html>
