--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
-	Main content
+	<div class="header">
+		<b>SpeedKenode</b>
+	</div>
 </body>
 </html>
