--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,5 +9,20 @@
 	<div class="header">
 		<b>SpeedKenode</b>
 	</div>
+
+	<ul class="topnav">
+	    <li><a href="#">Link</a></li>
+	    <li><a href="#">Link</a></li>
+	    <li><a href="#">Link</a></li>
+	    <li><a href="#">Link</a></li>
+	    <li class="dropdown">
+	    	<a href="">Droptest</a>
+	    	<div class="dropdown-content">
+	    		<a href="">1</a>
+	    		<a href="">2</a>
+	    		<a href="">3</a>
+	    	</div>
+	    </li>
+	</ul>
 </body>
 </html>
