--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <html>
 <head>
 	<title>Black Hat</title>
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-	<h1 class="center">404</h1>
-	<hr>
-	<pre class="center">
-	Oops ...
-	This page is lost for unknown reason ...
-	We are trying to look for it ...
-	</pre>
-	<img class="pic" src="./picture.png" height="64" width="64">
-	<a href="./homepage/index.html"><h5 class="center">© 2022 Black Studio</h5></a>
+	<div class="header">
+		<b>SpeedKenode</b>
+	</div>
 
+	<ul class="topnav">
+	    <li><a href="#">Link</a></li>
+	    <li><a href="#">Link</a></li>
+	    <li><a href="#">Link</a></li>
+	    <li><a href="#">Link</a></li>
+	    <li class="dropdown">
+	    	<a href="">Droptest</a>
+	    	<div class="dropdown-content">
+	    		<a href="">1</a>
+	    		<a href="">2</a>
+	    		<a href="">3</a>
+	    	</div>
+	    </li>
+	</ul>
 </body>
 </html>
