--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 		<b>SpeedKenode</b>
 	</div>
 
+	<!--top navigation-->
 	<ul class="topnav">
-	    <li><a href="#">Link</a></li>
-	    <li><a href="#">Link</a></li>
-	    <li><a href="#">Link</a></li>
-	    <li><a href="#">Link</a></li>
-	    <li class="dropdown">
-	    	<a href="">Droptest</a>
+	    <li class="topnav-locate"><a class="topnav-style" href="">Home</a></li>
+	    <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
+	    <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
+	    <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
+	    <li class="topnav-locate, dropdown">
+	    	<a class="topnav-style" href="">Droptest</a>
 	    	<div class="dropdown-content">
-	    		<a href="">1</a>
-	    		<a href="">2</a>
-	    		<a href="">3</a>
+	    		<a class="drop-list" href="">1</a>
+	    		<a class="drop-list" href="">2</a>
+	    		<a class="drop-list" href="">3</a>
 	    	</div>
 	    </li>
 	</ul>
