--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 	<title>Black Hat</title>
+    <meta charset="UTF-8">
+    <!--<meta name="description" content="Free Web tutorials">
+    <meta name="author" content="John Doe">-->
+    <meta name="keywords" content="SpeedKenode">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 	<div class="header">
 		<b>SpeedKenode</b>
@@ -12,10 +18,20 @@
 
 	<!--top navigation-->
 	<ul class="topnav">
-	    <li class="topnav-locate"><a class="topnav-style" href="">Home</a></li>
-	    <li class="topnav-locate"><a class="topnav-style" href="./test/page.html">Link</a></li>
-	    <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
-	    <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
+	    <li class="topnav-locate"><a class="topnav-style" href="">Trang chủ</a></li>
+
+	    <li class="topnav-locate, dropdown">
+            <a class="topnav-style" href="./lap-trinh/lap-trinh.html">Lập trình</a>
+            <div class="dropdown-content">
+                <a class="drop-list" href="">1</a>
+                <a class="drop-list" href="">2</a>
+                <a class="drop-list" href="">3</a>
+            </div>
+        </li>
+
+	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="./test2/page2.html">Công nghệ</a></li>
+	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Game</a></li>
+
 	    <li class="topnav-locate, dropdown">
 	    	<a class="topnav-style" href="">Droptest</a>
 	    	<div class="dropdown-content">
