--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!--top navigation-->
 	<ul class="topnav">
-	    <li class="topnav-locate"><a class="topnav-style" href="">Trang chủ</a></li>
+	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Trang chủ</a></li>
 
 	    <li class="topnav-locate, dropdown">
             <a class="topnav-style" href="./lap-trinh/lap-trinh.html">Lập trình</a>
@@ -31,15 +31,6 @@
 
 	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="./test2/page2.html">Công nghệ</a></li>
 	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Game</a></li>
-
-	    <li class="topnav-locate, dropdown">
-	    	<a class="topnav-style" href="">Droptest</a>
-	    	<div class="dropdown-content">
-	    		<a class="drop-list" href="">1</a>
-	    		<a class="drop-list" href="">2</a>
-	    		<a class="drop-list" href="">3</a>
-	    	</div>
-	    </li>
 	</ul>
 
 	<div class="row">
