--- a/lap-trinh/python/python-introduction.html
+++ b/lap-trinh/python/python-introduction.html
@@ -18,18 +18,19 @@
 
     <!--top navigation-->
     <ul class="topnav">
-        <li class="topnav-locate"><a class="topnav-style" href="../../index.html">Home</a></li>
-        <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
-        <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
-        <li class="topnav-locate"><a class="topnav-style" href="">Link</a></li>
+        <li class="topnav-locate, dropdown"><a class="topnav-style" href="../../index.html">Trang chủ</a></li>
+
         <li class="topnav-locate, dropdown">
-            <a class="topnav-style" href="">Droptest</a>
+            <a class="topnav-style" href="../lap-trinh.html">Lập trình</a>
             <div class="dropdown-content">
                 <a class="drop-list" href="">1</a>
                 <a class="drop-list" href="">2</a>
                 <a class="drop-list" href="">3</a>
             </div>
         </li>
+
+        <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Công nghệ</a></li>
+        <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Game</a></li>
     </ul>
 
     <ul class="sidebar">
