--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </li>
 
-	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="./test2/page2.html">Công nghệ</a></li>
+	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Công nghệ</a></li>
 	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Game</a></li>
 	</ul>
 
