--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Black Hat</title>
+	<title>SpeedKenode</title>
     <meta charset="UTF-8">
     <!--<meta name="description" content="Free Web tutorials">
     <meta name="author" content="John Doe">-->
