--- a/lap-trinh/python/python-introduction.html
+++ b/lap-trinh/python/python-introduction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Black Hat</title>
+    <title>SpeedKenode</title>
     <meta charset="UTF-8">
     <!--<meta name="description" content="Free Web tutorials">
     <meta name="author" content="John Doe">-->
@@ -10,6 +10,36 @@
     <link rel="icon" type="image/x-icon" href="../../favicon.ico">
     <link rel="stylesheet" href="../style.css">
 </head>
+
+<style>
+.sidebar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  height: 80%;
+  background-color: #f1f1f1;
+  position: absolute;
+  overflow-y: scroll;
+}
+
+.sidebar-button{
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.sidebar-button:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+</style>
 
 <body>
     <div class="header">
@@ -33,16 +63,68 @@
         <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Game</a></li>
     </ul>
 
-    <ul class="sidebar">
-        <li class="class1"><a class="active" href="#home">Home</a></li>
-        <li class="class1"><a class="class2" href="#news">News</a></li>
-        <li class="class1"><a class="class2" href="#contact">Contact</a></li>
-        <li class="class1"><a class="class2" href="#about">About</a></li>
-    </ul>
+<ul class="sidebar">
+  <li><a class="sidebar-button active" href="#home">Home</a></li>
+  <li><a class="sidebar-button" href="#news">News</a></li>
+  <li><a class="sidebar-button" href="#contact">Contact</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+  <li><a class="sidebar-button" href="#about">About</a></li>
+</ul>
 
-    <div class="content">
-        <h1 class="title">Title</h1>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<div style="margin-left:20%;">
+    <div style="padding:1px 16px;">
+        <h2>Fixed Full-height Side Nav</h2>
+        <h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
+        <p>Notice that this div element has a left margin of 25%. This is because the side navigation is set to 25% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
+        <p>Also notice that we have set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
+        <p>Some text..</p>
     </div>
+  <div class="footer">
+        <h2>Footer</h2>
+    </div>
+</div>
+
 </body>
 </html>
