--- a/lap-trinh/lap-trinh.html
+++ b/lap-trinh/lap-trinh.html
@@ -38,12 +38,18 @@
 
     <div class="row">
         <div class="leftcolumn">
+            <a class="button" href="./c/python-introduction.html">C</a>
+            <a class="button" href="./c#/python-introduction.html">C#</a>
+            <a class="button" href="./c++/python-introduction.html">C++</a>
+            <a class="button" href="./go/python-introduction.html">Go</a>
+            <a class="button" href="./java/python-introduction.html">Java</a>
+            <a class="button" href="./javascript/python-introduction.html">Javascript</a>
+            <a class="button" href="./lua/python-introduction.html">Lua</a>
+            <a class="button" href="./php/python-introduction.html">PHP</a>
             <a class="button" href="./python/python-introduction.html">Python</a>
-            <a class="button" href="./python/python-introduction.html">Python</a>
-            <a class="button" href="./python/python-introduction.html">Python</a>
-            <a class="button" href="./python/python-introduction.html">Python</a>
-            <a class="button" href="./python/python-introduction.html">Python</a>
-            <a class="button" href="./python/python-introduction.html">Python</a>
+            <a class="button" href="./ruby/python-introduction.html">Ruby</a>
+            <a class="button" href="./rust/python-introduction.html">Rust</a>
+            <a class="button" href="./swift/python-introduction.html">Swift</a>
         </div>
 
         <div class="rightcolumn">
