--- a/index.html
+++ b/index.html
@@ -1,81 +1,209 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>SpeedKenode</title>
-    <meta charset="UTF-8">
-    <!--<meta name="description" content="Free Web tutorials">
-    <meta name="author" content="John Doe">-->
-    <meta name="keywords" content="SpeedKenode">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<link rel="stylesheet" href="./style.css">
+	<script src="./script.js"></script>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+	<title>SpeedKenode</title>
 </head>
 
 <body>
-	<div class="header">
-		<b>SpeedKenode</b>
-	</div>
+	<div id="header">SpeedKenode</div>
 
-	<!--top navigation-->
-	<ul class="topnav">
-	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Trang chủ</a></li>
-
-	    <li class="topnav-locate, dropdown">
-            <a class="topnav-style" href="./lap-trinh/lap-trinh.html">Lập trình</a>
-            <div class="dropdown-content">
-                <a class="drop-list" href="">1</a>
-                <a class="drop-list" href="">2</a>
-                <a class="drop-list" href="">3</a>
-            </div>
-        </li>
-
-	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Công nghệ</a></li>
-	    <li class="topnav-locate, dropdown"><a class="topnav-style" href="">Game</a></li>
-	</ul>
-
-	<div class="row">
-  		<div class="leftcolumn">
-    		<div class="card">
-      			<h2>TITLE HEADING</h2>
-      			<h5>Title description, Dec 7, 2017</h5>
-      			<div class="fakeimg" style="height:200px;">Image</div>
-      			<p>Some text..</p>
-      			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    		</div>
-
-    		<div class="card">
-      			<h2>TITLE HEADING</h2>
-      			<h5>Title description, Sep 2, 2017</h5>
-      			<div class="fakeimg" style="height:200px;">Image</div>
-      			<p>Some text..</p>
-      			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    		</div>
-  		</div>
-
-        <div class="rightcolumn">
-            <div class="card">
-      		    <h2>About Me</h2>
-      		    <div class="fakeimg" style="height:100px;">Image</div>
-      		    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    	   </div>
-
-            <div class="card">
-      		    <h3>Popular Post</h3>
-      		    <div class="fakeimg"><p>Image</p></div>
-      		    <div class="fakeimg"><p>Image</p></div>
-      		    <div class="fakeimg"><p>Image</p></div>
-            </div>
-
-            <div class="card">
-      		    <h3>Follow Me</h3>
-      		    <p>Some text..</p>
-    		</div>
+	<div class="topnav" id="myTopnav">
+	  	<a href="">Home</a>
+	  	<a href="./page.html">News</a>
+	  	<a href="#contact">Contact</a>
+	  	<div class="dropdown">
+		    <button class="dropbtn">Dropdown</button>
+		    <div class="dropdown-content">
+		      	<a href="#">Link 1</a>
+		      	<a href="#">Link 2</a>
+		      	<a href="#">Link 3</a>
+		    </div>
+	  	</div>
+	  	<a href="#about">About</a>
+	  	<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+	  	<div class="search-container">
+		    <form>
+		      	<input type="text" placeholder="Search.." name="search">
+		      	<button type="submit"><i class="fa fa-search"></i></button>
+		    </form>
   		</div>
 	</div>
 
-	<div class="footer">
-  		<h2>Footer</h2>
+	<div class="slideshow-container">
+		<div class="mySlides">
+			<div id="img">
+				<img src="https://www.w3schools.com/howto/img_mountains_wide.jpg" style="width: 746px; height: 350px;">
+			</div>
+		  	<div id="caption">Caption Text</div>
+		</div>
+
+		<div class="mySlides">
+		  	<div id="img">
+				<img src="https://www.w3schools.com/howto/img_mountains_wide.jpg" style="width: 746px; height: 350px;">
+			</div>
+		  	<div id="caption">Caption Two</div>
+		</div>
+
+		<div class="mySlides">
+		  	<div id="img">
+				<img src="https://www.w3schools.com/howto/img_mountains_wide.jpg" style="width: 746px; height: 350px;">
+			</div>
+		  	<div id="caption">Caption Three</div>
+		</div>
 	</div>
 
+	<div id="row">
+		<div id="leftcolumn">
+    		<div id="button">Button</div>
+			<div id="line"></div>
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+
+    		<div id="button">Button</div>
+			<div id="line"></div>
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+
+    		<div id="button">Button</div>
+			<div id="line"></div>
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div id="button">Button</div>
+			<div id="line"></div>
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+
+    		<div class="card2">
+		      <div id="thumbnail"></div>
+		      	<div style="word-wrap: break-word; font-size: 20px;">
+		      		dskfksdjfnksdnfsfsfdffdsretetewqeqwsadssfsdfsd
+		  		</div>
+    		</div>
+		</div>
+
+		<div id="rightcolumn">
+		    <div class="card">
+		      <h3>Popular Post</h3>
+		      <div class="fakeimg"><p>Image</p></div>
+		      <div class="fakeimg"><p>Image</p></div>
+		      <div class="fakeimg"><p>Image</p></div>
+		    </div>
+		    <div class="card">
+		      <h3>Follow Me</h3>
+		      <p>Some text..</p>
+		    </div>
+		</div>
+	</div>
+
+	<div id="footer"><h2>Created by SpeedKenode.</h2></div>
+
+	<script>
+		let slideIndex = 0;
+		showSlides();
+	</script>
 </body>
 </html>
